--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li> <a href="#short">Short Film <span>1</span></a> </li>
         </ul>
       </li>
-      <li> <a href="about.html">About</a> </li>
+     <!-- <li> <a href="about.html">About</a> </li>
       <!-- <li> <a href="#" class="sub-nav-toggle">Features</a>
         <ul class="sub-nav hidden">
           <li> <a href="single-project.html">Project</a> </li>
@@ -100,8 +100,8 @@
   <div id="shadow"></div>
   <div id="container" class="clearfix no-margin">
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home feature">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_sun.html" data-title="Meeting Dr. Sun">
-        <figure class="images"> <img src="images/photography/meeting.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_sun.html" data-title="Meeting Dr. Sun">
+        <figure class="images"> <img src="image/meeting.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
