--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home feature">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_silence.html" data-title="">
-        <figure class="images"> <img src="images/photography/silence.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_silence.html" data-title="">
+        <figure class="images"> <img src="image/silence.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -130,8 +130,8 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home feature">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_monster.html" data-title="">
-        <figure class="images"> <img src="images/photography/monster.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_monster.html" data-title="">
+        <figure class="images"> <img src="image/monster.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -145,8 +145,8 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home tv">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_boat.html" data-title="">
-        <figure class="images"> <img src="images/photography/boat.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_boat.html" data-title="">
+        <figure class="images"> <img src="images/boat.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -160,8 +160,8 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_flower.html" data-title="">
-        <figure class="images"> <img src="images/photography/flowers.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_flower.html" data-title="">
+        <figure class="images"> <img src="image/photography/flowers.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -175,8 +175,8 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_absent.html" data-title="">
-        <figure class="images"> <img src="images/photography/absent.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_absent.html" data-title="">
+        <figure class="images"> <img src="image/photography/absent.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -190,8 +190,8 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_nile.html" data-title="">
-        <figure class="images"> <img src="images/photography/nile.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_nile.html" data-title="">
+        <figure class="images"> <img src="image/photography/nile.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -205,8 +205,8 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_summer.html" data-title="">
-        <figure class="images"> <img src="images/photography/summer.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="project/video_summer.html" data-title="">
+        <figure class="images"> <img src="image/summer.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -220,8 +220,8 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_justice.html" data-title="">
-        <figure class="images"> <img src="images/photography/justice.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_justice.html" data-title="">
+        <figure class="images"> <img src="image/justice.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -235,8 +235,8 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_meetingtrailer.html" data-title="">
-        <figure class="images"> <img src="images/photography/meetingtrailer.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_meetingtrailer.html" data-title="">
+        <figure class="images"> <img src="image/meetingtrailer.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -250,8 +250,8 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_baby.html" data-title="">
-        <figure class="images"> <img src="images/photography/baby.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_baby.html" data-title="">
+        <figure class="images"> <img src="image/baby.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -262,11 +262,12 @@
             </div>
           </div>
         </div>
-        </a> </div>
+        </a>
+      </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home music">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_laundry.html" data-title="">
-        <figure class="images"> <img src="images/photography/laundryman.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_laundry.html" data-title="">
+        <figure class="images"> <img src="image/laundryman.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -281,8 +282,8 @@
        </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home music">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_solitude.html" data-title="">
-        <figure class="images"> <img src="images/photography/solitude.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_solitude.html" data-title="">
+        <figure class="images"> <img src="image/solitude.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -297,8 +298,8 @@
        </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home music">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_everytime.html" data-title="">
-        <figure class="images"> <img src="images/photography/everytime.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_everytime.html" data-title="">
+        <figure class="images"> <img src="image/everytime.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -313,8 +314,8 @@
        </div>
     </div>
     <!-- <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home commercial">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_firefly.html" data-title="">
-        <figure class="images"> <img src="images/photography/firefly.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_firefly.html" data-title="">
+        <figure class="images"> <img src="image/firefly.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -328,8 +329,8 @@
         </a> </div>
     </div> -->
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home short">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="ajax/video_jaehyung.html" data-title="">
-        <figure class="images"> <img src="images/photography/jaehyung.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_jaehyung.html" data-title="">
+        <figure class="images"> <img src="image/jaehyung.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
