--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home tv">
       <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_boat.html" data-title="">
-        <figure class="images"> <img src="images/boat.jpg" alt="" /> </figure>
+        <figure class="images"> <img src="image/boat.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -161,7 +161,7 @@
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
       <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_flower.html" data-title="">
-        <figure class="images"> <img src="image/photography/flowers.jpg" alt="" /> </figure>
+        <figure class="images"> <img src="image/flowers.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -176,7 +176,7 @@
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
       <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_absent.html" data-title="">
-        <figure class="images"> <img src="image/photography/absent.jpg" alt="" /> </figure>
+        <figure class="images"> <img src="image/absent.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -191,7 +191,7 @@
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
       <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_nile.html" data-title="">
-        <figure class="images"> <img src="image/photography/nile.jpg" alt="" /> </figure>
+        <figure class="images"> <img src="image/nile.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
