--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link href="css/contact.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="screen" />
