--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
 <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
 <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+	
+<link rel="icon" type="image/png" sizes="310x310" href="image/ms-icon-310x310">
 
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
