--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
 <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
 	
-<link rel="icon" type="image/png" sizes="310x310" href="image/ms-icon-310x310">
+<link rel="icon" type="image/png" sizes="310x310" href="image/ms-icon-310x310.png">
 
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
