--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link href="css/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/magnific-popup.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/responsive-mobilefirst.css" rel="stylesheet" type="text/css" media="screen" />
-<link href="http://fonts.googleapis.com/css?family=Lato:400,400italic,600" rel="stylesheet" type="text/css" />
+<link href="//fonts.googleapis.com/css?family=Lato:400,400italic,600" rel="stylesheet" type="text/css" />
 <link href="//fonts.googleapis.com/css?family=Playfair+Display:400,400italic,600,700" rel="stylesheet" type="text/css" />
 <link rel="icon" type="image/png" sizes="310x310" href="image/ms-icon-310x310.png">
 
