--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home trailer">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="project/video_summer.html" data-title="">
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_summer.html" data-title="">
         <figure class="images"> <img src="image/summer.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
