--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
       New York, 12603 NY </li> 
     <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
     <!--<p style="font-size:80%">inquiry at</p>-->
-	  <li> <i class="fa fa-paper-plane-o"></i>kaiwei.lee@nyu.edu </li>
+     <li> 
+	<i class="fa fa-paper-plane-o"></i> 
+	<a href="mailto:kaiwei.lee@nyu.edu">kaiwei.lee@nyu.edu</a>
+     </li>
   </ul>
 </header>
 <div id="white-background"></div>
