--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
     <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
     <!--<p style="font-size:80%">inquiry at</p>-->
      <li> 
-	<i class="fa fa-paper-plane-o"></i> 
-	<a href="mailto:kaiwei.lee@nyu.edu">kaiwei.lee@nyu.edu</a>
+	<a href="mailto:kaiwei.lee@nyu.edu">
+	  <i class="fa fa-paper-plane-o"></i> kaiwei.lee@nyu.edu
+	</a>
      </li>
   </ul>
 </header>
