--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
     <!--<p style="font-size:80%">inquiry at</p>-->
      <li> 
+	 inquiry @ <br/>
 	<a href="mailto:kaiwei.lee@nyu.edu">
 	  <i class="fa fa-paper-plane-o"></i> kaiwei.lee@nyu.edu
 	</a>
