--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="image/lkwlogo.png">
+<meta name="msapplication-TileImage" content="/lkwlogo.png">
 <meta name="theme-color" content="#ffffff"> 
 
 <script src="js/modernizr.js" type="text/javascript"></script>
