--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!--<p style="font-size:80%">inquiry at</p>-->
      <li> 
 	 <i class="fa fa-paper-plane-o"></i> inquiry @ <br/>
-	 <a href="mailto:kaiwei.lee@nyu.edu"> kaiwei.lee@nyu.edu </a>
+	 <a href="mailto:kaiwei.lee@nyu.edu"><b>kaiwei.lee@nyu.edu</b></a>
      </li>
   </ul>
 </header>
