--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/lkwlogo.png">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff"> 
 
 <script src="js/modernizr.js" type="text/javascript"></script>
@@ -65,7 +65,7 @@
     <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
     <!--<p style="font-size:80%">inquiry at</p>-->
      <li> 
-	 <i class="fa fa-paper-plane-o"></i> fa-2x inquiry @ <br/>
+	 <i class="fa fa-paper-plane-o fa-2x"></i> Inquiry @ <br/>
 	 <a href="mailto:kaiwei.lee@nyu.edu"><b>kaiwei.lee@nyu.edu</b></a>
      </li>
   </ul>
