--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
     <!--<p style="font-size:80%">inquiry at</p>-->
      <li> 
-	 <i class="fa fa-paper-plane-o fa-2x"></i> Inquiry @ <br/>
+	 <i class="fa fa-paper-plane-o fa-lg"></i> Inquiry @ <br/>
 	 <a href="mailto:kaiwei.lee@nyu.edu"><b>kaiwei.lee@nyu.edu</b></a>
      </li>
   </ul>
