--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link href="css/responsive-mobilefirst.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="//fonts.googleapis.com/css?family=Lato:400,400italic,600" rel="stylesheet" type="text/css" />
 <link href="//fonts.googleapis.com/css?family=Playfair+Display:400,400italic,600,700" rel="stylesheet" type="text/css" />
-<link rel="icon" type="image/png" sizes="310x310" href="image/ms-icon-310x310.png">
+<link rel="icon" type="image/png" sizes="310x310" href="/ms-icon-310x310.png">
 
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
