--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div> -->
  
   <div class="left-corner-wrapper">
-  <h1 id="logo"><a href="http://www.kaiweilee.com">Kai Wei Lee</a></h1>
+  <h1 id="logo"><a href="https://kaiweilee.com">Kai Wei Lee</a></h1>
   
   <div id="menu-button">
     <div class="cursor"> 
