--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <div class="container clearfix centered">
       <div class="col-lg-12">
         <h3 class="header">Contact Me</h3>
-        <p class="sub-heading">Any inquiries, reach out.</p>
+        <p class="sub-heading">Any inquiries, please me know.</p>
       </div>
     </div>
     <div class="container clearfix centered">
@@ -58,11 +58,6 @@
         placeholder="What's on your mind..."></textarea>
       </fieldset>
 
-      <!--<fieldset class="pure-group">
-        <label for="color">Favourite Color: </label>
-        <input id="color" name="color" placeholder="green" />
-      </fieldset>-->
-
       <fieldset class="pure-group honeypot-field">
         <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text field; must be empty to submit the form! Otherwise, we assume the user is a spam bot.</label>
         <input id="honeypot" type="text" name="honeypot" value="" />
@@ -75,7 +70,7 @@
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
     <div class="thankyou_message" style="display:none;">
-      <h2><em>Thanks</em> for reaching out. I will get back to you soon.</h2>
+      <h2> Thank you for your message. <br/> I will get back to you soon. </h2>
     </div>
 
   </form>
