--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <div class="container clearfix centered">
       <div class="col-lg-12">
         <h3 class="header">Contact Me</h3>
-        <p class="sub-heading">Any inquiries, please me know.</p>
+        <p class="sub-heading">Any inquiries, please me know. yeah</p>
       </div>
     </div>
     <div class="container clearfix centered">
@@ -64,13 +64,13 @@
       </fieldset>
 
       <div class="input-wrapper clearfix">
-            <input type="submit" class="send-btn" value="Send" id="submit" name="Submit" />
+            <input type="submit" class="send-btn" id="submit" name="Submit" />
             <span id="message"></span></div>
     </div>
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
     <div class="thankyou_message" style="display:none;">
-      <h2> Thank you for your message. <br/> I will get back to you soon. </h2>
+      Thank you for your message. <br/> I will get back to you soon.
     </div>
 
   </form>
