--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <div class="container clearfix centered">
       <div class="col-lg-12">
         <h3 class="header">Contact Me</h3>
-        <p class="sub-heading">Any inquiries, please me know. 4</p>
+        <p class="sub-heading">Any inquiries, please me know. 5</p>
       </div>
     </div>
     <div class="container clearfix centered">
@@ -41,18 +41,18 @@
     <!-- change the form action to your script url -->
 
     <div class="form-elements">
-      <fieldset class="pure-group name-field">
+      <fieldset class="pure-group">
         <label for="name"> </label>
         <input id="name" name="name" placeholder="Your Name" />
       </fieldset>
 
-      <fieldset class="pure-group email-field">
+      <fieldset class="pure-group">
         <label for="email"> </label>
         <input id="email" name="email" type="email" value=""
         required placeholder="Your Email"/>
       </fieldset>
 
-      <fieldset class="pure-group message-field">
+      <fieldset class="pure-group">
         <label for="message"> </label>
         <textarea id="message" name="message" rows="10"
         placeholder="What's on your mind..."></textarea>
