--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <div class="container clearfix centered">
       <div class="col-lg-12">
         <h3 class="header">Contact Me</h3>
-        <p class="sub-heading">Any inquiries, please me know. 5</p>
+        <p class="sub-heading">Any inquiries, please me know. 6</p>
       </div>
     </div>
     <div class="container clearfix centered">
@@ -58,13 +58,13 @@
         placeholder="What's on your mind..."></textarea>
       </fieldset>
 
-      <fieldset class="pure-group honeypot-field">
+      <fieldset class="pure-group honeypot-field" style="display:none;" >
         <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text field; must be empty to submit the form! Otherwise, we assume the user is a spam bot.</label>
         <input id="honeypot" type="text" name="honeypot" value="" />
       </fieldset>
 
       <div class="input-wrapper clearfix">
-            <input type="submit" class="send-btn" id="submit" name="Submit" value="send"/>
+            <input type="submit" class="send-btn" id="submit" name="Submit" value=""/>
             <span id="message"></span></div>
     </div>
 
