--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <div class="container clearfix centered">
       <div class="col-lg-12">
         <h3 class="header">Contact Me</h3>
-        <p class="sub-heading">Any inquiries, please me know. 6</p>
+        <p class="sub-heading">Any inquiries, please me know. 7</p>
       </div>
     </div>
     <div class="container clearfix centered">
@@ -64,7 +64,7 @@
       </fieldset>
 
       <div class="input-wrapper clearfix">
-            <input type="submit" class="send-btn" id="submit" name="Submit" value=""/>
+            <input type="submit" class="send-btn" id="submit" name="Submit" value="send"/>
             <span id="message"></span></div>
     </div>
 
