--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
 <!-- FORM START HERE -->
 
-  <form class="gform pure-form pure-form-stacked" method="POST" 
+  <form class="gform pure-form pure-form-stacked" method="POST" autocomplete="off"
         action="https://script.google.com/macros/s/AKfycbxRdcO8YdMCcuppKjwYQPc2qc6Dc9FAsb7BewTrbAUz95VyR4fe/exec">
     <!-- change the form action to your script url -->
 
