--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
 <link href="css/responsive-mobilefirst.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="//fonts.googleapis.com/css?family=Lato:300,400,400italic,600" rel="stylesheet" type="text/css" />
 <link href="//fonts.googleapis.com/css?family=Playfair+Display:400,400italic,600,700" rel="stylesheet" type="text/css" />
+<link rel="icon" type="image/png" sizes="310x310" href="image/lkw-logo.png">
 <script src="js/modernizr.js" type="text/javascript"></script>
 
 </head>
