--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     </div>
     <div class="container clearfix centered">
     <div class="col-lg-8 col-md-9 col-sm-12 aligncenter centered">
-
+    <div class="borderline"></div>
 <!-- FORM START HERE -->
 
   <form class="gform pure-form pure-form-stacked" method="POST" autocomplete="off"
