--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
 <link href="//fonts.googleapis.com/css?family=Lato:400,400italic,600" rel="stylesheet" type="text/css" />
 <link href="//fonts.googleapis.com/css?family=Playfair+Display:400,400italic,600,700" rel="stylesheet" type="text/css" />
 <link rel="icon" type="image/png" sizes="310x310" href="image/lkw-logo.png">
-
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff"> 
-
 <script src="js/modernizr.js" type="text/javascript"></script>
 </head>
 <body>
@@ -45,7 +43,8 @@
           <li> <a href="#short">Short Film <span>1</span></a> </li>
         </ul>
       </li>
-     <!-- <li> <a href="about.html">About</a> </li>
+	    
+      <li> <a href="contact.html">Contact</a> </li>
       <!-- <li> <a href="#" class="sub-nav-toggle">Features</a>
         <ul class="sub-nav hidden">
           <li> <a href="single-project.html">Project</a> </li>
@@ -63,11 +62,11 @@
   <!--  <li> <i class="fa fa-map-marker"></i>285 Lexington Ave <br />
       New York, 12603 NY </li> 
     <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
-    <!--<p style="font-size:80%">inquiry at</p>-->
+    <!--<p style="font-size:80%">inquiry at</p>
      <li> 
 	 <i class="fa fa-paper-plane-o fa-lg"></i> Inquiry @ <br/>
 	 <a href="mailto:kaiwei.lee@nyu.edu"><b>kaiwei.lee@nyu.edu</b></a>
-     </li>
+     </li> -->
   </ul>
 </header>
 <div id="white-background"></div>
