--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
       </li>
 	    
-      <li> <a href="contact.html">Contact</a> </li>
+      <li> <a href="contact">Contact</a> </li>
       <!-- <li> <a href="#" class="sub-nav-toggle">Features</a>
         <ul class="sub-nav hidden">
           <li> <a href="single-project.html">Project</a> </li>
