--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,13 @@
  </div>
  </div>
  </section>
+    
+  <footer>
+    <div>
+      <p> Copyright © Lee, Kai-Wei 2020. All rights reserved. </p>
+    </div>
+  </footer>
+    
 </div>
   <!-- Submit the Form to Google Using "AJAX" -->
   <script data-cfasync="false" src="js/form-submission-handler.js"></script>
