--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
     </div>
     <!--
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home music">
-      <div class="margin-wrapper"> <a href="images/photography/nature06.jpg" data-title="" data-fancybox-group="group1" class="popup">
-        <figure class="images"> <img src="images/photography/solitude.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a href="image/nature06.jpg" data-title="" data-fancybox-group="group1" class="popup">
+        <figure class="images"> <img src="image/solitude.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
@@ -352,23 +352,7 @@
           </div>
         </div>
         </a> </div>
-    </div>
-    <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home music">
-      <div class="margin-wrapper"> <a href="images/photography/nature10.jpg" data-title="" data-fancybox-group="group1" class="popup">
-        <figure class="images"> <img src="images/photography/everytime.jpg" alt="" /> </figure>
-        <div class="covering-image centered">
-          <div class="info-box-content">
-            <div class="parent">
-              <div class="child">
-                <h2>Everytime in Love</h2>
-                <p class="uppercase">Music Video</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        </a> </div>
-    </div>
-    -->
+    </div> -->
   </div> 
   <!-- end #container -->
   
