--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,50 @@
 </head>
 
 <body>
+  
+<header> 
+  <!-- start main nav -->
+  <nav id="main-nav">
+    <ul class="option-set clearfix" data-option-key="filter">
+      <li> <a href="#" class="sub-nav-toggle active">Portfolio</a>
+        <ul id="options" class="sub-nav">
+          <li class="selected"> <a href="#home">All <span>15</span></a> </li>
+          <li> <a href="#feature">Feature Film <span>3</span></a> </li>
+          <li> <a href="#tv">TV <span>1</span></a> </li>
+          <li> <a href="#trailer">Trailer <span>7</span></a> </li>
+          <li> <a href="#music">Music Video <span>3</span></a> </li>
+          <!-- <li> <a href="#commercial">Commercial <span>1</span></a> </li> -->
+          <li> <a href="#short">Short Film <span>1</span></a> </li>
+        </ul>
+      </li>
+      <li> <a href="contact">Contact</a> </li>
+    </ul>
+  </nav>
+  <!-- end main nav -->
+  
+  <ul class="contact-list clearfix">
+  <!--  <li> <i class="fa fa-map-marker"></i>285 Lexington Ave <br />
+      New York, 12603 NY </li> 
+    <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
+    <!--<p style="font-size:80%">inquiry at</p>
+     <li> 
+	 <i class="fa fa-paper-plane-o fa-lg"></i> Inquiry @ <br/>
+	 <a href="mailto:kaiwei.lee@nyu.edu"><b>kaiwei.lee@nyu.edu</b></a>
+     </li> -->
+  </ul>
+</header>  
+  
+  <div class="left-corner-wrapper">
+  <h1 id="logo"><a href="https://kaiweilee.com">Kai Wei Lee</a></h1>
+  
+  <div id="menu-button">
+    <div class="cursor"> 
+      <!--Menu-->
+      <div id="nav-button"> <span class="nav-bar"></span> <span class="nav-bar second"></span> <span class="nav-bar third"></span> </div>
+    </div>
+  </div>
+  </div>
+
   <div id="content">
   <section class="section">
     <div class="container clearfix centered">
