--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 </header>  
   
   <div class="left-corner-wrapper">
-  <h1 id="logo"><a href="https://kaiweilee.com">Kai Wei Lee</a></h1>
+  <h1 id="logo"><a href="https://www.kaiweilee.com"></a></h1>
   
   <div id="menu-button">
     <div class="cursor"> 
