--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <![endif]-->
-<title>Contact</title>
+<title>Kai Wei Lee - Contact</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <meta name="author" content="weibergmedia">
@@ -10,6 +10,7 @@
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link href="css/contact.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="screen" />
@@ -19,8 +20,11 @@
 <link href="//fonts.googleapis.com/css?family=Lato:300,400,400italic,600" rel="stylesheet" type="text/css" />
 <link href="//fonts.googleapis.com/css?family=Playfair+Display:400,400italic,600,700" rel="stylesheet" type="text/css" />
 <link rel="icon" type="image/png" sizes="310x310" href="image/lkw-logo.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff"> 
 <script src="js/modernizr.js" type="text/javascript"></script>
-
 </head>
 
 <body>
@@ -133,6 +137,22 @@
   <!-- Submit the Form to Google Using "AJAX" -->
   <script data-cfasync="false" src="js/form-submission-handler.js"></script>
 <!-- END -->
-
+<script src="js/jquery-1.11.2.min.js" type="text/javascript"></script> 
+<script src="js/jquery-easing-1.3.js" type="text/javascript"></script> 
+<script src="js/retina.js" type="text/javascript"></script> 
+<script src="js/jquery.touchSwipe.min.js" type="text/javascript"></script> 
+<script src="js/jquery.isotope2.min.js" type="text/javascript"></script> 
+<script src="js/jquery.ba-bbq.min.js" type="text/javascript"></script> 
+<script src="js/packery-mode.pkgd.min.js" type="text/javascript"></script> 
+<script src="js/jquery.isotope.load.js" type="text/javascript"></script> 
+<script src="js/bootstrap.min.js"></script> 
+<script src="js/main2.js" type="text/javascript"></script> 
+<script src="js/jquery.form.js" type="text/javascript"></script> 
+<script src="js/input.fields.js" type="text/javascript"></script> 
+<script src="js/preloader.js" type="text/javascript"></script> 
+<script src="js/jquery.fancybox.pack.js" type="text/javascript"></script> 
+<script defer src="js/jquery.flexslider-min.js"></script> 
+<script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script> 
+<script src="js/jquery.fitvids.js" type="text/javascript"></script>
 </body>
 </html>
