--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!--<p style="font-size:80%">inquiry at</p>
      <li> 
 	 <i class="fa fa-paper-plane-o fa-lg"></i> Inquiry @ <br/>
-	 <a href="mailto:kaiwei.lee@nyu.edu"><b>kaiwei.lee@nyu.edu</b></a>
+	 <a href="mailto:kaiwei.lee@nyu.edu"><b>email</b></a>
      </li> -->
   </ul>
 </header>
@@ -80,7 +80,7 @@
   </div> -->
  
   <div class="left-corner-wrapper">
-  <h1 id="logo"><a href="https://kaiweilee.com">Kai Wei Lee</a></h1>
+  <h1 id="logo"><a href="https://www.kaiweilee.com"></a></h1>
   
   <div id="menu-button">
     <div class="cursor"> 
