--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,8 @@
 <body>
   
   <div class="left-corner-wrapper">
-  <h1 id="logo"><a href="https://www.kaiweilee.com"></a></h1>
+   <h1 id="logo"><a href="https://www.kaiweilee.com"></a></h1>
+  </div>
   
   <div id="content">
   <section class="section">
