--- a/index.html
+++ b/index.html
@@ -59,25 +59,23 @@
   <!-- end main nav -->
   
   <ul class="contact-list clearfix">
-  <!--  <li> <i class="fa fa-map-marker"></i>285 Lexington Ave <br />
-      New York, 12603 NY </li> 
-    <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
-    <!--<p style="font-size:80%">inquiry at</p>
+<!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
      <li> 
-	 <i class="fa fa-paper-plane-o fa-lg"></i> Inquiry @ <br/>
-	 <a href="mailto:kaiwei.lee@nyu.edu"><b>email</b></a>
-     </li> -->
+	 <i class="fas fa-id-badge fa-lg"> <b>Kai Wei is an...</b></i>
+	 <i>Editor</i>
+	 <i>Assistant Director</i>
+     </li>
   </ul>
 </header>
 <div id="white-background"></div>
 <div id="background-color"></div>
-<div id="content">
-   <!-- <div id="social-header">
-    <ul class="social-list clearfix">
-      <li> <a href="https://tw.linkedin.com/in/kaiweilee" target="_blank"><i class="fa fa-linkedin-square"></i></a> </li>
-      <li> <a href="http://staffmeup.com/profile/id/81720" target="_blank"><i class="fa fa-power-off"></i></a> </li>
-    </ul>
-  </div> -->
+<!-- <div id="content">
+      <div id="social-header">
+       <ul class="social-list clearfix">
+        <li> <a href="https://tw.linkedin.com/in/kaiweilee" target="_blank"><i class="fa fa-linkedin-square"></i></a> </li>
+        <li> <a href="http://staffmeup.com/profile/id/81720" target="_blank"><i class="fa fa-power-off"></i></a> </li>
+       </ul>
+      </div> -->
  
   <div class="left-corner-wrapper">
   <h1 id="logo"><a href="https://www.kaiweilee.com"></a></h1>
