--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
           <li> <a href="#short">Short Film <span>1</span></a> </li>
         </ul>
       </li>
-	    
       <li> <a href="contact">Contact</a> </li>
       <!-- <li> <a href="#" class="sub-nav-toggle">Features</a>
         <ul class="sub-nav hidden">
@@ -61,7 +60,7 @@
   <ul class="contact-list clearfix">
 <!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
      <li> 
-	 <i class="fas fa-id-badge fa-lg"> <b>Kai Wei is an...</b></i>
+	 <i class="fas fa-id-badge fa-lg"></i> <b>Kai Wei is an...</b> </li>
 	 <i>Editor</i>
 	 <i>Assistant Director</i>
      </li>
