--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <ul class="contact-list clearfix">
 <!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
      <li> 
-       <i class="fas fa-id-badge fa-lg"></i> <b>Kai Wei is an...</b> 
+       <i class="fa fa-id-badge" aria-hidden="true"></i> <b>Kai Wei is an...</b> 
      </li>
      <li><i>Editor</i></li>
      <li><i>Assistant Director</i></li>
