--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
      <li> 
        <i class="fa fa-id-badge" aria-hidden="true"></i> <b>Kai Wei is an...</b> 
      </li>
-     <li><i>Editor</i></li>
+     <li><i>Editor</i></li><br/>
      <li><i>Assistant Director</i></li>
   </ul>
 </header>
