--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
   <ul class="contact-list clearfix">
 <!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
      <li> 
-       <i class="fa fa-id-badge" aria-hidden="true"></i> <b>Kai Wei is an...</b> 
+       <i class="fa fa-id-badge"></i> <b>Kai Wei is an...</b> 
      </li>
-     <li><i>Editor</i></li><br/>
-     <li><i>Assistant Director</i></li>
+     <i>Editor</i><br/><i>Assistant Director</i>
   </ul>
 </header>
 <div id="white-background"></div>
