--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
   
   <ul class="contact-list clearfix">
 <!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
-     <li> 
-       <i class="fa fa-id-badge"></i> <b>Kai Wei is an...</b> 
-     </li>
-     <i>Editor</i><br/><i>Assistant Director</i>
+     <li> <i class="fa fa-phone"></i><b>Kai Wei is an...</b></li>
+       <i>Editor</i><br/>
+       <i>Assistant Director</i>
   </ul>
 </header>
 <div id="white-background"></div>
