--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   
   <ul class="contact-list clearfix">
 <!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
-     <li> <i class="fa fa-phone"></i><b>Kai Wei is an...</b></li>
+     <li> <i class="fa fa-id-badge" aria-hidden="true"></i><b>Kai Wei is an...</b></li>
        <i>Editor</i><br/>
        <i>Assistant Director</i>
   </ul>
