--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   <ul class="contact-list clearfix">
 <!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
      <li> <i><img src=""><b>Kai Wei is an...</b></i></li>
-       <i><img src="/image/arrow-right.png">Editor</i><br/>
-       <i><img src="/image/arrow-right.png">Assistant Director</i>
+       <i>Editor</i><br/>
+       <i>Assistant Director</i>
   </ul>
 </header>
 <div id="white-background"></div>
