--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
   
   <ul class="contact-list clearfix">
 <!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
-     <li> <i><b>Kai Wei is an...</b></i></li>
+     <br/><br/><br/>
+     <li> <i>Kai Wei is an...</i></li><br/>
        <i>Editor</i><br/>
        <i>Assistant Director</i>
   </ul>
