--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
   
   <ul class="contact-list clearfix">
 <!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
-     <br/><br/><br/>
-     <li> <i>Kai Wei is an...</i></li><br/>
-       <i>Editor</i><br/>
-       <i>Assistant Director</i>
+     <li> <i>•Kai Wei is an...</i></li><br/>
+          <i>&nbsp;→Editor</i><br/>
+          <i>&nbsp;→Assistant Director</i>
   </ul>
 </header>
 <div id="white-background"></div>
