--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   
   <ul class="contact-list clearfix">
 <!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
-     <li> <i>•&nbsp;Kai Wei is an...</i></li><br/>
+     <li> <i>&nbsp;&nbsp;Kai Wei is an...</i></li><br/>
           <i>&nbsp;&nbsp;→&nbsp;Editor</i><br/>
           <i>&nbsp;&nbsp;→&nbsp;Assistant Director</i>
   </ul>
