--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 <body>
 
 <header> 
+  
+  <ul class="bio-list clearfix">
+     <li> <i>&nbsp;&nbsp;Kai Wei is an...</i></li><br/>
+          <i>&nbsp;&nbsp;→&nbsp;Editor</i><br/>
+          <i>&nbsp;&nbsp;→&nbsp;Assistant Director</i>
+  </ul>
   <!-- start main nav -->
   <nav id="main-nav">
     <ul class="option-set clearfix" data-option-key="filter">
@@ -56,13 +62,6 @@
     </ul>
   </nav>
   <!-- end main nav -->
-  
-  <ul class="contact-list clearfix">
-<!-- <li> <i class="fa fa-phone"></i>(886)&nbsp;921-725-923 </li> -->
-     <li> <i>&nbsp;&nbsp;Kai Wei is an...</i></li><br/>
-          <i>&nbsp;&nbsp;→&nbsp;Editor</i><br/>
-          <i>&nbsp;&nbsp;→&nbsp;Assistant Director</i>
-  </ul>
 </header>
 <div id="white-background"></div>
 <div id="background-color"></div>
