--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <header> 
   
   <ul class="bio-list clearfix">
+     <hr class="h1">
      <li> <i>&nbsp;&nbsp;Kai Wei is an...</i></li><br/>
           <i>&nbsp;&nbsp;→&nbsp;Editor</i><br/>
           <i>&nbsp;&nbsp;→&nbsp;Assistant Director</i>
