--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
   </nav>
   <!-- end main nav -->
   <ul class="bio-list clearfix">
-     <hr class="h1">
-     <li> <i>&nbsp;&nbsp;Kai Wei is an...</i></li><br/>
-          <i>&nbsp;&nbsp;→&nbsp;Editor</i><br/>
-          <i>&nbsp;&nbsp;→&nbsp;Assistant Director</i>
+     <li> <i>&nbsp;&nbsp;◼&nbsp;Kai Wei is an...</i></li><br/>
+          <i>&nbsp;&nbsp;▶&nbsp;Editor</i><br/>
+          <i>&nbsp;&nbsp;▶&nbsp;Assistant Director</i>
   </ul>
 </header>
 <div id="white-background"></div>
