--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
   </nav>
   <!-- end main nav -->
   <ul class="bio-list clearfix">
-     <li> <i>&nbsp;&nbsp;●&nbsp;Kai Wei is an...</i></li>
-          <i>&nbsp;&nbsp;→&nbsp;Editor</i><br/>
-          <i>&nbsp;&nbsp;→&nbsp;Assistant Director</i>
+     <div class="b1">&nbsp;&nbsp;&nbsp;<i>Kai Wei is an...</i><br/>
+     <div class="b2">&nbsp;&nbsp;→&nbsp;Editor<br/>
+     <div class="b3">&nbsp;&nbsp;→&nbsp;Assistant Director</div>
   </ul>
+  <div class="line-2"></div>
 </header>
 <div id="white-background"></div>
 <div id="background-color"></div>
