--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
   </nav>
   <!-- end main nav -->
   <ul class="bio-list clearfix">
-     <div class="b1">&nbsp;&nbsp;&nbsp;<i>Kai Wei is an...</i><br/>
-     <div class="b2">&nbsp;&nbsp;→&nbsp;Editor<br/>
-     <div class="b3">&nbsp;&nbsp;→&nbsp;Assistant Director</div>
+     <div class="b1">&nbsp;→&nbsp;<i>Kai Wei is an...</i><br/>
+     <div class="b2">&nbsp;&nbsp;Editor<br/>
+     <div class="b3">&nbsp;&nbsp;Assistant Director</div>
   </ul>
   <div class="line-2"></div>
 </header>
