--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <ul class="option-set clearfix" data-option-key="filter">
       <li> <a href="#" class="sub-nav-toggle active">Portfolio</a>
         <ul id="options" class="sub-nav">
-          <li class="selected"> <a href="#home">All <span>15</span></a> </li>
+          <li class="selected"> <a href="#home">All <span>16</span></a> </li>
           <li> <a href="#feature">Feature Film <span>3</span></a> </li>
-          <li> <a href="#tv">TV <span>1</span></a> </li>
+          <li> <a href="#tv">TV <span>2</span></a> </li>
           <li> <a href="#trailer">Trailer <span>7</span></a> </li>
           <li> <a href="#music">Music Video <span>3</span></a> </li>
           <!-- <li> <a href="#commercial">Commercial <span>1</span></a> </li> -->
@@ -87,13 +87,13 @@
   <div id="shadow"></div>
   <div id="container" class="clearfix no-margin">
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home feature">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_sun.html" data-title="Meeting Dr. Sun">
-        <figure class="images"> <img src="image/meeting.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_silence.html" data-title="">
+        <figure class="images"> <img src="image/silence.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
               <div class="child">
-                <h2>Meeting Dr. Sun</h2>
+                <h2>Silence</h2>
                 <p class="uppercase">Feature Film</p>
               </div>
             </div>
@@ -102,13 +102,13 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home feature">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_silence.html" data-title="">
-        <figure class="images"> <img src="image/silence.jpg" alt="" /> </figure>
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_sun.html" data-title="Meeting Dr. Sun">
+        <figure class="images"> <img src="image/meeting.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
               <div class="child">
-                <h2>Silence</h2>
+                <h2>Meeting Dr. Sun</h2>
                 <p class="uppercase">Feature Film</p>
               </div>
             </div>
@@ -125,6 +125,21 @@
               <div class="child">
                 <h2>Mon Mon Mon Monsters</h2>
                 <p class="uppercase">Feature Film</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </a> </div>
+    </div>
+     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home tv">
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_tread.html" data-title="">
+        <figure class="images"> <img src="image/treadstone.jpg" alt="" /> </figure>
+        <div class="covering-image centered">
+          <div class="info-box-content">
+            <div class="parent">
+              <div class="child">
+                <h2>Treadstone</h2>
+                <p class="uppercase">TV Series</p>
               </div>
             </div>
           </div>
