--- a/projects/video_boat.html
+++ b/projects/video_boat.html
@@ -24,7 +24,7 @@
       
     </div>
     <div class="col-lg-4 col-sm-6 border-left-wrapper">
-      <p> <strong> Position</strong> <span class="alignright">Second Assistant Director</span></p>
+      <p> <strong> Position</strong> <span class="alignright">2nd Assistant Director</span></p>
       <p> <strong> Showrunner</strong> <span class="alignright">Nahnatchka Khan</span></p>
       <p> <strong> Writer</strong> <span class="alignright">Nahnatchka Khan</span></p>
     <div class="tiny-break"></div>
