--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <ul class="option-set clearfix" data-option-key="filter">
       <li> <a href="#" class="sub-nav-toggle active">Portfolio</a>
         <ul id="options" class="sub-nav">
-          <li class="selected"> <a href="#home">All <span>16</span></a> </li>
+          <li class="selected"> <a href="#home">All <span>18</span></a> </li>
           <li> <a href="#feature">Feature Film <span>3</span></a> </li>
-          <li> <a href="#tv">TV <span>2</span></a> </li>
+          <li> <a href="#tv">TV <span>3</span></a> </li>
           <li> <a href="#trailer">Trailer <span>7</span></a> </li>
           <li> <a href="#music">Music Video <span>3</span></a> </li>
-          <!-- <li> <a href="#commercial">Commercial <span>1</span></a> </li> -->
           <li> <a href="#short">Short Film <span>1</span></a> </li>
+          <li> <a href="#commercial">Commercial <span>1</span></a> </li>
         </ul>
       </li>
       <li> <a href="contact">Contact</a> </li>
@@ -155,6 +155,21 @@
               <div class="child">
                 <h2>Fresh off the Boat</h2>
                 <p class="uppercase">TV Series</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </a> </div>
+    </div>
+    <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home tv">
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_tigertail.html" data-title="">
+        <figure class="images"> <img src="image/tigertail.jpg" alt="" /> </figure>
+        <div class="covering-image centered">
+          <div class="info-box-content">
+            <div class="parent">
+              <div class="child">
+                <h2>Tigertail</h2>
+                <p class="uppercase">TV Movie</p>
               </div>
             </div>
           </div>
@@ -315,21 +330,6 @@
         </a>
        </div>
     </div>
-    <!-- <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home commercial">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_firefly.html" data-title="">
-        <figure class="images"> <img src="image/firefly.jpg" alt="" /> </figure>
-        <div class="covering-image centered">
-          <div class="info-box-content">
-            <div class="parent">
-              <div class="child">
-                <h2>Firefly Lamp</h2>
-                <p class="uppercase">Commercial</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        </a> </div>
-    </div> -->
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home short">
       <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_jaehyung.html" data-title="">
         <figure class="images"> <img src="image/jaehyung.jpg" alt="" /> </figure>
@@ -345,6 +345,21 @@
         </div>
         </a>
        </div>
+    </div>
+     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home commercial">
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_firefly.html" data-title="">
+        <figure class="images"> <img src="image/firefly.jpg" alt="" /> </figure>
+        <div class="covering-image centered">
+          <div class="info-box-content">
+            <div class="parent">
+              <div class="child">
+                <h2>Firefly Lamp</h2>
+                <p class="uppercase">Commercial</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </a> </div>
     </div>
     <!--
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home music">
