--- a/projects/video_tigertail.html
+++ b/projects/video_tigertail.html
@@ -4,7 +4,7 @@
     -->
   </div>
   <div class="images">
-     <img src="image//tigertail.jpg" alt="" />
+     <img src="image/tigertail.jpg" alt="" />
     </div>
   
   <script src="js/jquery.fitvids.js" type="text/javascript"></script>
