--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </nav>
   <!-- end main nav -->
   <ul class="bio-list clearfix">
-     <div class="b1">&nbsp;&nbsp;<i>Kai Wei is an</i>&nbsp;▶<br/>
+     <div class="b1">&nbsp;&nbsp;<i>Kai Wei is an</i>&nbsp;▼<br/>
      <div class="b2">&nbsp;&nbsp;Editor<br/>
      <div class="b3">&nbsp;&nbsp;Assistant Director</div>
   </ul>
