--- a/projects/video_tigertail.html
+++ b/projects/video_tigertail.html
@@ -1,8 +1,8 @@
 <div id="custom-content" class="white-popup-block">
-  <div class="videoWrapper">
-    <!--<iframe src="https://player.vimeo.com/video/178725894" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    -->
-  </div>
+  <!--<div class="videoWrapper">
+    <iframe src="https://player.vimeo.com/video/178725894" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+   
+  </div> -->
   <div class="images">
      <img src="image/tigertail.jpg" alt="" />
     </div>
